--- a/Bootstrap/second.html
+++ b/Bootstrap/second.html
@@ -1,126 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="seconds.css">
-    <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
-    <script src="../Bootstrap/js/jquery.js"></script>
-    <script src="../Bootstrap/js/bootstrap.min.js"></script>
-    <title>Demoss</title>
-    <script>
-        $(document).ready(function(){
-            //tooltip
-            $('[data-toggle="tooltip"]').tooltip();
-            //popover
-            $('[data-toggle="popover"]').popover();
-             $(".btnload").click(function(){
-                $(this).button('loading');
-            });  
-            $(".btnreset").click(function(){
-                $(this).button("loading").delay(500).queue(function(){
-                    $(this).button("reset");
-                    $(this).dequeue();
-                }); 
-            }); 
-            $(".btncustom").click(function(){
-                $(this).button('loading').delay(1000).queue(function(){
-                    $(this).button('somestringvalue');
-                    $(this).dequeue();
-                });        
-            });
-        });
-    </script>        
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>porjecta1</title>
 </head>
-
 <body>
-  <div class="container-fluid">
-    <div class="container clearfix" id="header">
-      <a href="https://foodrecipes.inspirythemes.com/bootstrap/" >
-        <img src="../Image/food_recepi_logo.png" alt="logo">
-      </a>
-      <img class="header-img" src="../Image/food_header-image.png" alt="Image">
-      <div class="header-user-nav">
-      <ul>
-        <li><a href="#"><i class="glyphicon glyphicon-log-in"></i> Log in</a></li>
-      </ul>
-      </div>
-    </div>
-    <div id="nav-wrap" style="background-color: #558f04f1; height: 50px;">
-      <div class="inn-nav container clearfix">
-        <nav class="navbar navbar-default col-md-10" style="background-color: #558f04a9; border: none;">
-          <ul class="nav navbar-nav" style="overflow-x: hidden;">
-            <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/">Home</a></li>
-            <li><a href="#">Sliders</a>
-            <ul class="dropdown-menu">
-              <li><a href="http://foodrecipes.inspirydemos.com/">Left Image Slider</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/thumbnail-slider/">Thumbnail Slider</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/nivo-slider/">Nivo Slider</a></li>
-            </ul>
-            </li>
-            <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/recipes-listing/">Recent Recipes</a></li>
-            <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/submit-recipe/">Submit Recipe</a></li>
-            <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/blog/">Blog</a></li>
-            <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/about-us/">About</a></li>
-            <li><a href="#">Skins</a>
-            <ul class="dropdown-menu">
-              <li><a href="?skin=skin_default">Default</a></li>
-              <li><a href="?skin=skin_blue">Blue</a></li>
-              <li><a href="?skin=skin_red">Red</a></li>
-              <li><a href="?skin=skin_orange">Orange</a></li>
-            </ul>
-            </li>
-            <li><a href="#">Features</a>
-            <ul class="dropdown-menu">
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/advance-search-results/">Advanced Search</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/chef-listing/">Chef Listing</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/user-profile/">User Profile</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/features/">Features</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/typography/">Typography</a></li>
-              <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/faq/">FAQ</a></li>
-            </ul>
-            </li>
-            <li><a href="https://foodrecipes.inspirythemes.com/bootstrap/contact-us/">Contact</a></li>
-            <li><a href="http://themeforest.net/item/food-recipes-wordpress-theme/1923882?ref=inspirythemes">Buy Theme</a></li>
-          </ul>
-        </nav>
-        <div class="navbar navbar-default col-md-2" style="background-color: #558f04a2; margin-left: -5px; border: none;">
-            <ul id="menu-social-menu" class="nav navbar-nav clearfix">
-              <li><a href="#"><i class="glyphicon glyphicon-flag"></i></a></li>
-              <li><a href="#"><i class="glyphicon glyphicon-flag"></i></a></li>
-              <li><a href="#"><i class="glyphicon glyphicon-flag"></i></a></li>
-              <li><a href="#"><i class="glyphicon glyphicon-flag"></i></a></li>
-            </ul>				
-          </div>
-        </div>
-        <div class="top-search clearfix">
-          <h3>Recipe Search</h3>
-          <form role="search" method="get" id="searchform" class="searchform" action="https://foodrecipes.inspirythemes.com/bootstrap/">
-            <div>
-              <label class="screen-reader-text" for="s">Search for:</label>
-              <input type="text" value="" name="s" id="s">
-              <input type="submit" id="searchsubmit" value="Search"><i class="fa fa-search"></i>
-            </div>
-          </form>
-          <p class="statement col-sm-8"><span class="fireRed">Recipe Types:</span>
-          <a href="https://foodrecipes.inspirythemes.com/bootstrap/recipe-type/cheese-2/">Cheese</a>,
-          <a href="https://foodrecipes.inspirythemes.com/bootstrap/recipe-type/chicken-2/">Chicken</a>,
-          <a href="https://foodrecipes.inspirythemes.com/bootstrap/recipe-type/chocolate/">Chocolate</a>,
-          <a href="https://foodrecipes.inspirythemes.com/bootstrap/recipe-type/pizzas/">Pizzas</a>,
-          <a href="https://foodrecipes.inspirythemes.com/bootstrap/recipe-type/potatos/">Potatos</a>,
-          <a href="https://foodrecipes.inspirythemes.com/bootstrap/recipe-type/rools/">Rolls</a>,
-          </p>
-        </div>
-        <div class="container clearfix">
-          <div>
-            <img src="../Image/food_recepi_logo.png" alt="logo">
-          </div>
-          <div> 
-            <p>Recent Recipes</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <h1>hello world</h1>
 </body>
 </html>
